# triangle-shooter

./: CMakeLists.txt  README.md  background_tile.html  build.bat  index.html  main.cpp  main.js  main.wasm  poop.html  serve.bat
assets/Shaders/: Chart.fsh  Chart.vsh  Trichart.fsh  Trichart.vsh  Viewport.fsh  Viewport.vsh  imageShader.fsh  imageShader.vsh  roundedImageShader.fsh  roundedImageShader.vsh  simpleRect.fsh
button/: button.cpp  button.h
generate atlas/: make_atlas.py
lineRenderer/: lineRenderer.cpp  lineRenderer.h
renderer2d/: renderer2d.cpp  renderer2d.h
starship/: starship.cpp  starship.h
textRenderer/: textRenderer.cpp  textRenderer.h
